# upki

./: .gitignore  Cargo.toml  LICENSE-MIT  PACKAGING.md  README.md  deny.toml  dist-workspace.toml
.github/: cargo-c-setup.yml  dependabot.yml
.github/workflows/: bench.yml  build.yml  lints.yml  mirror.yml  package.yml  release.yml
dist-packages/libupki/: build-ffi.sh  dist.toml
dist-packages/libupki_openssl/: build-ffi.sh  dist.toml
revoke-test/: Cargo.toml  README.md  decorated.json  plain.json  test-sites.json
revoke-test/benches/: bench.rs
revoke-test/benches/data/: config.toml
revoke-test/benches/data/revocation/: manifest.json
revoke-test/src/: decorate.py  lib.rs
revoke-test/tests/: system_tests.rs
revoke-test/tests/api/: ffi.rs  openssl.rs
rustls-upki/: Cargo.toml  README.md
rustls-upki/examples/: simpleclient.rs
rustls-upki/src/: lib.rs
rustls-upkid/: Cargo.toml
upki/: Cargo.toml  build.rs
upki-cli/: Cargo.toml  README.md
upki-cli/tests/: integration.rs
upki-cli/tests/data/config_unknown_fields/: config.toml
upki-cli/tests/data/typical/revocation/: manifest.json
upki-cli/tests/data/verify_of_empty_manifest/: config.toml
upki-ffi/: Cargo.toml  build.rs  upki.h
upki-ffi/example/: Makefile  demo-certs.h  upki-demo.c
upki-ffi/src/: lib.rs
upki-mirror/: Cargo.toml
upki-mirror/snap/: snapcraft.yaml
upki-mirror/snap/local/: create-dir
upki-mirror/src/: main.rs  mozilla.rs
upki-openssl/: Cargo.toml  Makefile  build.rs  preload.c  upki-openssl.h
upki-openssl/src/: lib.rs  test.rs
upki-openssl/tests/: codegen.rs
upki/benches/: bench.rs
upki/debian/: config.toml  postinst  upki-fetch.service  upki-fetch.timer
upki/ffi-example/: Makefile  upki-demo.c
upki/snap/: snapcraft.yaml
upki/src/: cache.rs  config.rs  data.rs  fetch.rs  ffi.rs  intermediates.rs  lib.rs  main.rs  revocation.rs  sha256.rs
upki/src/revocation/: fetch.rs  index.rs  mod.rs
upki/tests/: codegen.rs  integration.rs  system_tests.rs
upki/tests/data/empty/: manifest.json
upki/tests/data/evolution/: manifest.json
upki/tests/data/evolution/revocation/: manifest.json
upki/tests/data/typical/: filter2.delta  manifest.json
upki/tests/data/typical/revocation/: filter3.delta
upki/tests/data/verify_non_existent_dir/: config.toml
upki/tests/data/verify_of_empty_manifest/: config.toml
upki/tests/data/verify_of_empty_manifest/revocation/: manifest.json
upkid-mirror/: Cargo.toml
