[workspace]
members = ["upki", "upki-mirror", "rustls-upki"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/rustls/upki"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["alloc"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
eyre = "0.6"
hex = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "h2", "http2", "json", "rustls-tls"] }
ring = "0.17"
serde = "1"
serde_json = "1"
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"

new_without_default = "allow"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
