[workspace]
members = ["upki", "upki-mirror", "rustls-upki"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/rustls/upki"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["alloc"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
eyre = "0.6"
hex = { version = "0.4", features = ["serde"] }
insta = { version = "1.44.3", features = ["filters"] }
insta-cmd = "0.6.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "h2", "http2", "json", "rustls-tls"] }
rand = "0.9.2"
regex = "1.12"
ring = "0.17"
serde = "1"
serde_json = "1"
tempfile = "3.23.0"
tiny_http = "0.12.0"
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt"] }
toml = "0.9.10"
tracing = "0.1"
tracing-subscriber = "0.3"
xdg = "3.0.0"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"

new_without_default = "allow"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
