[workspace]
members = ["upki", "upki-mirror", "revoke-test", "rustls-upki"]
resolver = "3"

[workspace.package]
license = "Apache-2.0 OR MIT"
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/rustls/upki"

[workspace.dependencies]
aws-lc-rs = "1.15.2"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["alloc"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
clubcard-crlite = "0.3.2"
directories = "6"
eyre = "0.6"
hex = { version = "0.4", features = ["serde"] }
http = "1"
insta = { version = "1.44.3", features = ["filters"] }
insta-cmd = "0.6.0"
reqwest = { version = "0.13", default-features = false, features = ["charset", "default-tls", "h2", "http2", "json"] }
rand = "0.9.2"
regex = "1.12"
serde = "1"
serde_json = "1"
tempfile = "3.23.0"
tiny_http = "0.12.0"
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt"] }
tokio-rustls = "0.26"
toml = "0.9.10"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-parser = "0.18"
xdg = "3.0.0"
webpki-ccadb = "0.2.1"
webpki-roots = "1"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"

new_without_default = "allow"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
