[package]
name = "revoke-test"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
eyre.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-ccadb = { git = "https://github.com/rustls/webpki-roots" }
webpki-roots.workspace = true
x509-parser.workspace = true

[lints]
workspace = true
