[package]
name = "revoke-test"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
eyre.workspace = true
codspeed-criterion-compat = { version = "3", optional = true }
http.workspace = true
rustls.workspace = true
rustls-upki.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-ccadb.workspace = true
webpki-roots.workspace = true
x509-parser.workspace = true

[dev-dependencies]
criterion.workspace = true
insta-cmd.workspace = true
rustls-pki-types.workspace = true
upki = { path = "../upki" }

[features]
__bench_codspeed = ["dep:codspeed-criterion-compat"]

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
