[package]
name = "revoke-test"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
eyre.workspace = true
http.workspace = true
ring.workspace = true
rustls = { version = "0.23", features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-ccadb = { git = "https://github.com/rustls/webpki-roots" }
webpki-roots = "0.26"
x509-parser = "0.16"

[lints]
workspace = true
