[package]
name = "rustls-upki"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustls.workspace = true
rustls-webpki.workspace = true
upki = { path = "../upki" }

[dev-dependencies]
rustls-native-certs = "0.8.3"

[lints]
workspace = true
