[package]
name = "upki-cli"
version = "1.0.0-beta.1"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Platform-independent browser-grade certificate infrastructure"

[dependencies]
clap.workspace = true
eyre.workspace = true
rustls-pki-types.workspace = true
upki = { version = "=1.0.0-beta.1", path = "../upki", features = ["fetch"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
insta-cmd.workspace = true
rand.workspace = true
regex.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[lints]
workspace = true
