[package]
name = "upki-ffi"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "C FFI bindings for upki"

[lib]
name = "upki"
crate-type = ["cdylib"]
doc = false # Can't document this and `upki` because they have the same name

[dependencies]
rustls-pki-types.workspace = true
upki = { path = "../upki", version = "0.1.0" }

[build-dependencies]
cbindgen.workspace = true

[lints]
workspace = true
