[package]
name = "upki-ffi"
version = "0.1.0"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "upki"
crate-type = ["cdylib"]
doc = false # Can't document this and `upki` because they have the same name

[dependencies]
upki = { path = "../upki" }

[build-dependencies]
cbindgen.workspace = true

[lints]
workspace = true
