[package]
name = "upki-ffi"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "C FFI bindings for upki"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rustls-pki-types.workspace = true
upki = { path = "../upki", version = "0.2.0" }

[build-dependencies]
cbindgen.workspace = true

[lints]
workspace = true
