[package]
name = "upki-mirror"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
eyre.workspace = true
hex.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
