[package]
name = "upki-mirror"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs.workspace = true
clap.workspace = true
eyre.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
upki = { path = "../upki" }

[lints]
workspace = true
