[package]
name = "upki-openssl"
version = "1.0.0-beta.2"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
capi = []

[dependencies]
openssl-sys = { workspace = true }
rustls-pki-types.workspace = true
upki = { version = "=1.0.0-beta.2", path = "../upki", features = ["capi"] }

[dev-dependencies]
cbindgen.workspace = true
similar-asserts.workspace = true

[lints]
workspace = true

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from = "upki-openssl.h" }]
