[package]
name = "upki"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clubcard-crlite.workspace = true
eyre.workspace = true
hex.workspace = true
reqwest.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
xdg.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
directories.workspace = true

[dev-dependencies]
insta.workspace = true
insta-cmd.workspace = true
rand.workspace = true
regex.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[lints]
workspace = true

[package.metadata.deb]
extended-description = """\
A tool for managing certificate revocation data for publicly trusted certificates."""
depends = "$auto, ca-certificates, systemd"
section = "utils"
priority = "optional"
assets = [
    ["target/release/upki", "usr/bin/", "755"],
    ["debian/config.toml", "etc/xdg/upki/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = [
    { unit-name = "upki-fetch" },
]

[package.metadata.deb.variants.upki]
name = "upki"
