[package]
name = "upki"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Platform-independent browser-grade certificate infrastructure"

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
chrono.workspace = true
clubcard-crlite.workspace = true
directories.workspace = true
hex.workspace = true
reqwest.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
insta-cmd.workspace = true
rand.workspace = true
regex.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[build-dependencies]
cbindgen.workspace = true

[features]
default = []
capi = []

[lints]
workspace = true

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from = "upki.h" }]
