[package]
name = "upki"
version = "1.0.0-beta.1"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Platform-independent browser-grade certificate infrastructure"

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
chrono.workspace = true
clubcard-crlite.workspace = true
directories.workspace = true
hex.workspace = true
reqwest = { workspace = true, optional = true }
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
cbindgen.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true

[features]
default = []
capi = []
fetch = ["dep:reqwest", "dep:serde_json", "dep:tempfile"]

[lints]
workspace = true

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from = "upki.h" }]
